# emu

./: .env  .gitignore  .travis.yml  CHANGELOG  INSTALL  LICENSE  Makefile  Makefile.am  README  README.md  README.rst  autogen.sh  configure.ac  env.sh  make-release  mkrelease  mktar  requirements.txt  run-tests.sh  setup.py  test.requirements.txt  todo
Documentation/: Makefile.am
Documentation/man/: Makefile.am  emu-checkout.man.in  emu-init.man.in  emu-log.man.in  emu-prune.man.in  emu-push.man.in  emu-squash.man.in  emu-stack.man.in  emu-status.man.in  emu-verify.man.in  emu.man.in
emu/: .gitignore  Makefile.am  __init__.py  cli.py  emu  emu-checkout.py  emu-clean  emu-clean.py  emu-clean.sh  emu-clean.sh.in  emu-init  emu-init.py  emu-init.sh  emu-init.sh.in  emu-log  emu-log.py  emu-log.sh.in  emu-peek  emu-peek.sh.in  emu-pop  emu-pop.sh  emu-pop.sh.in  emu-prune.py  emu-push  emu-push.py  emu-push.sh  emu-push.sh.in  emu-reset  emu-restore  emu-sink  emu-sink.py  emu-snapshot  emu-squash.py  emu-stack  emu-stack.py  emu-stack.sh  emu-stack.sh.in  emu-status  emu-status.py  emu-status.sh  (+16 more)
emu/static/: styles.css
emu/templates/: timeline.html
emu/templates/sink-templates/: config
emu/templates/source-templates/: excludes
emu/test/: __init__.py  test_emu.py  test_io.py
emu/test/data/sink/: 2015-07-15 11.49.47
emu/test/data/sink/.emu/: HEAD
lib/: libemu
man/: .gitignore  Makefile.am  emu-checkout.1  emu-checkout.man.in  emu-clean.1  emu-clean.man.in  emu-init.1  emu-init.man  emu-init.man.in  emu-log.1  emu-log.man  emu-log.man.in  emu-peek.man.in  emu-pop.man  emu-pop.man.in  emu-prune.1  emu-prune.man.in  emu-pull.1  emu-push.1  emu-push.man  emu-push.man.in  emu-sink.1  emu-sink.man.in  emu-squash.1  emu-squash.man.in  emu-stack.man  emu-stack.man.in  emu-status.man  emu-verify.1  emu-verify.man  emu-verify.man.in  emu.1  emu.man  emu.man.in
releases/: emu-0.0.1.tar.gz.md5  emu-0.0.2.tar.gz.md5  emu-0.0.3.tar.gz.md5  emu-0.0.4.tar.gz.md5
scripts/: mkrelease.sh  mktar.sh  run-tests.sh  todo.sh  update.sh
share/emu/: emu-util
share/man/: emu-clean.1  emu-init.1  emu-log.1  emu-peek.1  emu-pop.1  emu-push.1  emu-reset.1  emu-restore.1  emu-sink.1  emu-snapshot.1  emu-stack.1  emu-status.1  emu-verify.1  emu.1
templates/: Makefile.am
templates/source-templates/: excludes
templates/stack-templates/: config
test/: .gitignore  init-clean  init-help  init-permissions  init-reinitialize  init-template  init-update  man.in  run-tests.sh
test/clean/: deadlink.in  in-progress  in-progress.in  lock  lock.in  orphans  orphans.in
test/init/: dirs.in  files  files.in  permissions  template  template.in  update
test/libemu/: dir  dir.in  echo  fail  hooks  lock  panic  permissions  permissions.in  sink  stack.in  variables  variables.in
test/log/: help  limit  limit.in  log.in  no-sink  no-sink.in  push.in  sinks  snapshot  stacks.in  summary  summary.in
test/push/: dry-run  dry-run.in  excludes  excludes.in  force.in  max  max.in  mutex.in  no-sink.in  no-stack.in  push.in  verbose  verbose.in
test/restore/: help  restore
test/sink/: add  help  quiet  rm  show  sink.in
test/snapshot/: excludes  force  max  message  mutex  no-sink  snapshot  verbose
test/stack/: add.in  rm.in  stack.in
test/verify/: hash  hash.in  sink-hash
tests/: .gitignore  __init__.py  libtest.sh  man  man.in  test_emu.py  test_io.py  test_parser.py  version  version.in
tests/clean/: deadlink  debug  help  in-progress  lock  lock.in  orphans
tests/data/sink/: Most Recent Backup
tests/data/sink/.emu/: config
tests/data/source/.emu/: excludes
tests/data/source/.emu/sinks/: origin
tests/init/: clean  dirs  files  files.in  help  init  permissions.in  quiet  reinitialize  template  template.in  update
tests/libemu/: dir  echo.in  fail  fail.in  hooks  hooks.in  lock  lock.in  panic  panic.in  permissions  sink  stack  traps.in  variables
tests/log/: help  limit  log  log.in  no-sink  no-stack.in  push  sinks  snapshot  stacks  summary
tests/peek/: help  peek
tests/pop/: pop.in
tests/push/: dry-run  dry-run.in  excludes  force  help  max  message  mutex  no-sink  no-stack.in  push  verbose  verbose.in  verify
tests/restore/: help  restore
tests/sink/: add  help  quiet  rm  show  sink
tests/snapshot/: dry-run  excludes  force  help  max  message  mutex  no-sink  snapshot  verbose  verify
tests/stack/: add  help  quiet  rm.in  show  stack
tests/verify/: hash  hash.in  invalid-hash  sink-hash  stack-hash.in
usr/share/emu/: emu-util
usr/share/emu/source-templates/: excludes
